--- a/style/index.css
+++ b/style/index.css
@@ -13,12 +13,28 @@ body{
     padding: 0;
 }
 
-#fimJogo{
+.fimJogo{
+    display: none;
+}
+
+#telaEscura{
     background-color: black;
     opacity: 0.6;
     width: 100%;
     height: 100%;
     position: absolute;
+}
+
+#Mensagem{
+    font-size: 100px;
+    border: solid 1px red;
+    color: red;
+    background-color: green;
+    opacity: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
 
 .X, .O{
