--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,7 @@
 
 *{
     box-sizing: border-box;
+    font-family: 'Fredoka One', sans-serif; 
 }
 
 body{
@@ -14,7 +15,7 @@ body{
 }
 
 .fimJogo{
-    display: none;
+    display: none; /*<-----------------------------------------*/
 }
 
 #telaEscura{
@@ -26,20 +27,26 @@ body{
 }
 
 #Mensagem{
-    font-size: 100px;
-    border: solid 1px red;
-    color: red;
-    background-color: green;
-    opacity: 1;
+    width: 70%;
+    height: 70%;
+    border-radius: 10px;
+    background-color: #1a262d;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); 
+    align-items: center; 
+    justify-content: center;
+
+}
+
+
+#Mensagem h2{
+    font-size: 60px;
 }
 
 .X, .O{
     display: block;
-    font-family: 'Fredoka One', sans-serif; 
     font-size: 100px;
     display: flex;
     align-items: center; 
@@ -54,10 +61,6 @@ body{
     color: #f0b239;
 }
 
-h1{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 50px;
-}
 
 .container{
     position: absolute;
@@ -67,8 +70,69 @@ h1{
     transform: translate(-50%, -50%); 
 }
 
+header{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0 10px;
+}
+
+h2{
+    font-size: 50px;
+    font-weight: bolder;
+}
+
+h1{
+    align-items: left;
+}
+
+h1>.X, h1>.O{
+    font-size: 50px;
+    display: inline;
+    letter-spacing: 7px;
+    margin: 0;
+}
+
+#displayTurn{
+    color: #a8bec9;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+}
+
+#displayTurn>h1{
+    text-align: center;
+    width: 100%;
+    line-height: 50px;
+    display: block;
+    background-color: #1f3540;
+    box-shadow: 0 3px #13252f;
+    border-radius: 10px;
+}
+
+#reloadButon{
+    display: flex;
+    align-items: center; 
+    justify-content: right;
+}
+
+button{
+    height: 45px;
+    width: 45px;
+    background-color: #a8bec9;
+    border: none;
+    border-radius: 5px;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    box-shadow: 0 3px #4e5b62;
+}
+
+button img{
+    width: 90%;
+}
+
 .matriz{
-    margin: 15px auto;
+    margin:0 auto;
     width: 450px;
     height: 450px;
 
